# ruge-lms

client/: bun.lockb  tailwind.config.ts
client/src/: App.tsx
server/: .env.example  .gitignore  Cargo.toml
server/migrations/: 20240927155424_1_create_foo.sql
server/src/: main.rs
