[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["cors"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "time", "uuid" ] }
dotenvy = { version = "0.15.7" }
